gcc/testsuite/rust/rustc/ui/enums-pats-not-idents.rs
fn main() {
    let a(1) = 13; // { dg-error ".E0531." "" { target *-*-* } }
}

